--- a/app/src/main/res/layout/fragment_output.xml
+++ b/app/src/main/res/layout/fragment_output.xml
@@ -9,9 +9,9 @@
         android:id="@+id/answer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="50"
-        android:textSize="50sp"
         android:layout_gravity="center|top"
         android:layout_marginTop="50dp"
-        />
+        android:text="50"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="50sp" />
 </FrameLayout>
